--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul>
                     <li><a href="#flex-container">Features</a></li>
-                    <li><a href="#About Us">About us</a></li>
+                    <li><a href="#About-Us">About us</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav></span>
@@ -51,7 +51,7 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div> </div>
 
-    <section id="About Us" class="About Us">
+    <section id="About-Us" class="About-Us">
         <div class="container">
             <h2>About Us</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore, ratione. Libero, temporibus dolorum ad soluta obcaecati voluptas nobis reprehenderit similique consequatur asperiores deserunt nostrum dolore, neque tempore eos adipisci aperiam?</p>
